Using the user that owns the file instead of info from procfile
Also changed some logs (removed some), passing some datastructures by
reference, and added a couple more ips

Signed-off-by: David Caro <dcaro@wikimedia.org>

--- a/netsnoop.yaml
+++ b/netsnoop.yaml
@@ -1,4 +1,10 @@
 interesting_services:
+  "wikimedia.es":
+    ips:
+      - 195.201.53.168
+  "wikimedia.it":
+    ips:
+      - 51.75.90.142
   "meta.wikimedia.org":
     ips:
       - 208.80.154.224
